# lowess-grouped

./: .gitignore  README.md  example.ipynb  lowess_grouped.py  pyproject.toml  requirements.txt
example/: requirements.txt  temperature-example.ipynb
src/: lowess_grouped.py
src/lowess_grouped/: lowess_grouped.py
tests/: test_lowess_grouped.py
tests/data/: temperature-by-region.csv
